@@ -1,4 +1,6 @@
 - do not propose packages for non installed locales
+- pass the prefered choices to {callback_choices}: this allows urpmi to select
+  all the prefered packages according to installed locales
 
 Version 1.80 - 3 September 2007, by Pascal "Pixel" Rigaux
 
